# OnsetEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clangd.sh  clean.sh  configure.sh  formatter.sh  run.sh  vcpkg.json
assets/audio/LICENSES/: StumpyStrust.txt
assets/fonts/LICENSES/: MesloLG.txt
assets/shaders/: basic_lighting.frag  basic_lighting.vert  color.frag  color.vert  f.frag  framebuffer.frag  framebuffer.vert  light.frag  reflector.vert  shadow_depth_cube.frag  shadow_depth_cube.geom  shadow_framebuffer.frag  shadow_framebuffer.vert  shadow_map.frag  shadow_render.frag  shadow_render.vert  shadow_render2.frag  shadow_render2.vert  skybox.vert  sprite.frag  stencil.frag  stencil.vert  surface.frag  surface.vert  v.vert
assets/textures/: LICENSE
assets/textures/polygons/: LICENSE
docs/: Doxyfile.in  README.md
docs/notes/: Box2D_notes.txt
include/: component_all.h  component_all.hpp  component_audio_data.h  component_body_chain.h  component_body_chain.hpp  component_body_circle.h  component_body_circle.hpp  component_body_edge.h  component_body_edge.hpp  component_body_polygon.h  component_body_polygon.hpp  component_body_transform.h  component_boxbody.hpp  component_camera.h  component_camera.hpp  component_color.h  component_fixture_user_data.h  component_light.h  component_material.h  component_mesh.h  component_mesh_cube.hpp  component_mesh_ground.hpp  component_mesh_heptagon.hpp  component_mesh_hexagon.hpp  component_mesh_octagon.hpp  component_mesh_pentagon.hpp  component_mesh_sphere.hpp  component_mesh_square.hpp  component_mesh_triangle.hpp  component_player.h  component_player.hpp  component_quad.h  component_render_buffers.h  component_render_buffers.hpp  component_render_data.h  component_shader.h  component_shader.hpp  component_shader_program.h  component_shader_program.hpp  component_shader_program_light.h  (+48 more)
include/events/: event_all.h  event_toggle_select_mode.h
include/meshes/: component_mesh_cube.h  component_mesh_cube.hpp  component_mesh_ground.h  component_mesh_skybox.h  component_mesh_sphere.h  component_mesh_sprite.h
src/: component_shader.cpp  component_texture.cpp  core_asset_manager.cpp  core_assetmanager.cpp  core_audio_manager.cpp  core_game.cpp  core_input_commander.cpp  core_input_invoker.cpp  core_log_manager.cpp  core_text_manager.cpp  core_window.cpp  core_window_manager.cpp  main.cpp  system_audio.cpp  system_camera.cpp  system_collision.cpp  system_movement.cpp  system_player_movement.cpp  system_render.cpp  system_select_mode.cpp
tools/formatter/: Makefile  README.txt  main.cpp  mesh_formatter.cpp  mesh_formatter.h  mesh_formatter.hpp
